# Allegro

./: .gitignore  .travis.yml  AUTHORS  ChangeLog  LICENSE  README.md  requirements.txt  setup.cfg  setup.py  tox.ini
Allegro.egg-info/: PKG-INFO  SOURCES.txt
Enifma.egg-info/: PKG-INFO  SOURCES.txt
Enigma.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
allegro/: __init__.py  app.py  controller.py  rpc.py  service.py
enigma/: __init__.py  app.py  controller.py  enigma  enigma-server.ini  enigma.py  log.py  rpc.py  rpc_client.py  service.py  template_api.py
enigma.egg-info/: PKG-INFO  SOURCES.txt  pbr.json
enigma/config/: enigma-server.ini
enigma/consumers/: test.py
enigma/core/: consumer.py  rpc.py
enigma/pid/: process.pid
examples/: main.py  start.py  stop.py  task1.py  tasks1.py  test.ini  test.py  test.sh
tests/: enigma-server.ini  main.py  test.ini  test.py
