[metadata]
name = enigma
version = 0.0.2
summary = A Python Backend Framework
description-file = README.md
author = Junkai Huang
author-email = alecyrus@163.com
classifier =
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages =
    enigma

[entry_points]
console_scripts =
